Make a form to create todo tasks

--- a/meteorJS-list.html
+++ b/meteorJS-list.html
@@ -6,6 +6,10 @@
   <div class="container">
     <header>
       <h1>Todo List Using MeteorJS</h1>
+
+      <form class = "add-todos">
+        <input type="text" name="text" placeholder="Type to add new tasks"/>
+      </form>
     </header>
 
     <ul>
